--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,15 +7,17 @@ dependencies = [
     "mcp",
     "python-dotenv",
     "openai",
-    "supabase>=2.6.0",   
+    "supabase>=2.6.0",
 ]
 
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
+# Tell setuptools that modules live under src/
 [tool.setuptools]
-packages = ["src"]
+package_dir = {"" = "src"}
+py_modules = ["main"]  # <-- because your file is src/main.py (a module, not a package)
 
 [project.scripts]
-main = "src.main:main"
+main = "main:main"     # <-- console script entry: calls main() inside src/main.py
