--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,24 @@
 [project]
-name = "dedalus-docs-mcp-server"
-version = "1.0.0"
-description = "MCP server for serving and querying documentation"
+name = "hazard-mcp"
+version = "0.1.0"
+description = "MCP server for hazards analytics/repair/projections"
 requires-python = ">=3.10"
 dependencies = [
-    "mcp",
-    "python-dotenv",
-    "openai",
-    "supabase>=2.6.0",
+  "mcp",
+  "supabase>=2.6.0",
+  "python-dotenv>=1.0.1",
+  "openai"
 ]
 
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
-# Tell setuptools that modules live under src/
+# Tell setuptools our modules live under src/
 [tool.setuptools]
-package_dir = {"" = "src"}
-py_modules = ["main"]  # <-- because your file is src/main.py (a module, not a package)
+package_dir = { "" = "src" }
+py_modules = ["main"]           # because your file is src/main.py
 
 [project.scripts]
-main = "main:main"     # <-- console script entry: calls main() inside src/main.py
+main = "main:main"              # calls main() inside src/main.py
+
