--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,18 @@ dependencies = [
   "mcp",
   "supabase>=2.6.0",
   "python-dotenv>=1.0.1",
-  "openai"
+  "openai",
 ]
 
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = ["setuptools>=68"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+package-dir = { "" = "src" }
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[project.scripts]
+main = "hazard_mcp.main:main"
