--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,13 @@
 [project]
 name = "hazard-mcp"
 version = "1.0.0"
-description = "MCP server for serving and querying documentation"
+description = "MCP server for hazards analytics and projections"
 requires-python = ">=3.10"
 dependencies = [
-    "mcp",
-    "python-dotenv",
-    "openai",
+  "openmcp",
+  "supabase>=2.6.0",
+  "python-dotenv",
+  "openai"
 ]
 
 [build-system]
@@ -17,4 +18,4 @@ build-backend = "setuptools.build_meta"
 packages = ["src"]
 
 [project.scripts]
-main = "src.main:main"
+hazard-mcp = "src.main:main"
